--- a/Test02/Views/KinhDoanh/BaoCao.cshtml
+++ b/Test02/Views/KinhDoanh/BaoCao.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
     ViewBag.baocao = "active";
     ViewBag.nd = "Báo cáo";
+    ViewBag.hieuung7 = "bx-tada";
 }
 
 
