--- a/Test02/Views/KinhDoanh/QuanLyDL.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDL.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
     ViewBag.dl = "active";
     ViewBag.nd = "Danh sách đại lý";
+    ViewBag.hieuung2 = "bx-tada";
     QuanLyDLEntities2 database = new QuanLyDLEntities2();
     List<LoaiDL> LoaiDL = database.LoaiDLs.ToList();
 }
