--- a/Test02/Views/KinhDoanh/QuanLyHD.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyHD.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
     ViewBag.hd = "active";
     ViewBag.nd = "Danh sách hóa đơn";
+    ViewBag.hieuung4 = "bx-tada";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 <h2>Danh sách hóa đơn</h2>
