--- a/Test02/Views/KhachHang/DonHangDL.cshtml
+++ b/Test02/Views/KhachHang/DonHangDL.cshtml
@@ -26,87 +26,92 @@
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-            <h3 class="tile-title">DANH SÁCH ĐƠN HÀNG</h3>
-            <div class="tile-body table-responsive">
-                <table>
-                    <tr>
-                        <th>
-                            Mã đơn hàng
-                        </th>
-                        <th>
-                            Ngày lập
-                        </th>
-                        <th>
-                            Trạng thái tiếp nhận
-                        </th>
-                        <th>
-                            Tình trạng thanh toán
-                        </th>
-                        <th>
-                            Tình trạng giao hàng
-                        </th>
-                        <th style="text-align: center;">Chức năng</th>
-                    </tr>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.MaDH)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NgayLap)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TrangThai)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                            </td>
-                            <td>
-                                @{
-                                    var checkTTGH = item.TinhTrangGH;
+            <div class="tile-body">
+                <h3 class="tile-title">DANH SÁCH ĐƠN HÀNG</h3>
+                <div class="col-md-12 table-responsive">
+                    <table class="table dataTable table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                           id="sampleTable">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Mã đơn hàng
+                                </th>
+                                <th>
+                                    Ngày lập
+                                </th>
+                                <th>
+                                    Trạng thái tiếp nhận
+                                </th>
+                                <th>
+                                    Tình trạng thanh toán
+                                </th>
+                                <th>
+                                    Tình trạng giao hàng
+                                </th>
+                                <th style="text-align: center;">Chức năng</th>
+                            </tr>
+                        </thead>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.MaDH)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NgayLap)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TrangThai)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                </td>
+                                <td>
+                                    @{
+                                        var checkTTGH = item.TinhTrangGH;
 
-                                    if (checkTTGH == "Chờ giao")
-                                    {
-                                        <p>Chờ giao hàng</p>
-                                    }
+                                        if (checkTTGH == "Chờ giao")
+                                        {
+                                            <p>Chờ giao hàng</p>
+                                        }
 
-                                    else if (checkTTGH == "Đang giao")
-                                    {
-                                        <p>Đang giao hàng</p>
-                                    }
+                                        else if (checkTTGH == "Đang giao")
+                                        {
+                                            <p>Đang giao hàng</p>
+                                        }
 
-                                    else if (checkTTGH == "Đã giao")
-                                    {
-                                        <p>Đã giao hàng</p>
+                                        else if (checkTTGH == "Đã giao")
+                                        {
+                                            <p>Đã giao hàng</p>
+                                        }
                                     }
-                                }
-                            </td>
-                            <td style="text-align: center;">
-                                @{
-                                    var checkTTTT = item.TinhTrangThanhToan;
-                                    var checkTTTN = item.TrangThai;
-                                    if (checkTTTT == "Đã thanh toán" || checkTTTN == "Đã xét duyệt")
-                                    {
-                                        <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
-                                            <i class="fa fa-info"></i>
-                                        </a>
-                                        @*@Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })*@
+                                </td>
+                                <td style="text-align: center;">
+                                    @{
+                                        var checkTTTT = item.TinhTrangThanhToan;
+                                        var checkTTTN = item.TrangThai;
+                                        if (checkTTTT == "Đã thanh toán" || checkTTTN == "Đã xét duyệt")
+                                        {
+                                            <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
+                                                <i class="fa fa-info"></i>
+                                            </a>
+                                            @*@Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })*@
+                                        }
+                                        else
+                                        {
+                                            <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
+                                                <i class="fa fa-info"></i>
+                                            </a>
+                                            <a class="btn btn-outline-warning" href="/KhachHang/DeleteDH/@item.MaDH">
+                                                <i class="fa fa-close"></i>
+                                            </a>
+                                        }
                                     }
-                                    else
-                                    {
-                                        <a class="btn btn-outline-success" href="/KhachHang/DetailsDH/@item.MaDH">
-                                            <i class="fa fa-info"></i>
-                                        </a>
-                                        <a class="btn btn-outline-warning" href="/KhachHang/DeleteDH/@item.MaDH">
-                                            <i class="fa fa-close"></i>
-                                        </a>
-                                    }
-                                }
-                            </td>
-                        </tr>
-                    }
-                </table>
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </div>
             </div>
         </div>
     </div>
