--- a/Test02/Views/KhachHang/LienHe.cshtml
+++ b/Test02/Views/KhachHang/LienHe.cshtml
@@ -10,8 +10,34 @@
         <div class="tile">
             <h3 class="tile-title">THÔNG TIN DOANH NGHIỆP</h3>
             <div class="tile-body table-responsive">
-                <div>Số điện thoại: </div>
-                <div>Email: </div>
+                <table style="font-size: 1rem;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: center;">Phòng ban</th>
+                            <th style="text-align: center;">Số điện thoại</th>
+                            <th style="text-align: center;">Email</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: center;">
+                                <p>Kinh doanh</p>
+                                <p>(Giải quyết vấn đề về đơn hàng)</p>
+
+                            </td>
+                            <td style="text-align: center;">(+84) 999999999</td>
+                            <td style="text-align: center;">kinhdoanh@gmail.com</td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;">
+                                <p>Kế toán</p>
+                                <p>(Giải quyết vấn đề về công nợ)</p>
+                            </td>
+                            <td style="text-align: center;">(+84) 111111111</td>
+                            <td style="text-align: center;">ketoan@gmail.com</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
