--- a/Test02/Views/LoginDL/Login.cshtml
+++ b/Test02/Views/LoginDL/Login.cshtml
@@ -74,11 +74,11 @@
                         <input type="submit" value="Đăng nhập" />
                     </div>
                     <!--=====LINK TÌM MẬT KHẨU======-->
-                    <div class="@*text-right*@ p-t-12">
-                        <a class="txt2" href="~/LoginDL/QuenMK">
+                    <div class="text-right p-t-12">
+                        @*<a class="txt2" href="~/LoginDL/QuenMK">
                             Bạn quên mật khẩu?
-                        </a>
-                        <a class="txt2" href="~/LoginDL/DangKy" style="margin-left: 90px;">
+                        </a>*@
+                        <a class="txt2" href="~/LoginDL/DangKy" @*style="margin-left: 90px;"*@>
                             Đăng ký
                         </a>
                     </div>
