--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -159,7 +159,7 @@
         var ctxb = $("#barChartDemo").get(0).getContext("2d");
         var barChart = new Chart(ctxb).Bar(data);
     </script>
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         //Thời Gian
         function time() {
             var today = new Date();
@@ -210,7 +210,7 @@
                 win.print();
             }
         }
-    </script>
+    </script>*@
     <script src="~/Content/ckeditor/ckeditor.js"></script>
     @RenderSection("script", false)
 </body>
