--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -455,7 +455,7 @@
                         </div>
                         <div class="form-group col-md-8">
                             <label class="control-label">Chọn mã đại lý</label>
-                            <select class="form-control" name="MaDL" required>
+                            <select class="form-control" id="MaDL" name="MaDL" required>
                                 <option selected disabled>-----Vui lòng chọn------</option>
                                 @{ foreach (var item01 in dsdl)
                                     {
@@ -463,10 +463,11 @@
                                     }
                                 }
                             </select>
+                            <label style="font-size:15px;color:red" hidden id="error01" class="control-label">Vui lòng chọn mã đại lý ! </label>
                         </div>
                         <div class="form-group col-md-12 " style="text-align:center">
                             <label style="font-size:20px" class="control-label">---------THÔNG TIN ĐƠN HÀNG-------</label>
-
+                            <input hidden id="SoLuongSP" value="" name="sl" />
                         </div>
                         <div class="form-group col-md-12" id="themdong">
                             @*<div class="form-group col-md-12">
@@ -485,16 +486,24 @@
                                     <input class="form-check" type="number" name="SoLuong" value="true" id="SoLuong" required />
                                 </div>*@
                         </div>
+                        <div class="form-group col-md-12" style="text-align:end">
+                            <label style="font-size:20px;color:red" id="TongTien" class="control-label">Tổng tiền: </label>
+
+                        </div>
+                        <div class="form-group col-md-12" style="text-align:center">
+                            <label style="font-size:16px;color:blue" id="CongNo" class="control-label" hidden>Đang kiểm tra... </label>
+
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer ">
                     <div class="row">
                         <div class="col-lg-12">
-                            <input class="btn btn-add" id="themsp" type="button" name="DiemGiao" value="Thêm SP" onclick="themSP()" required />
+                            <input class="btn btn-add" id="themsp"  type="button" disabled value="Thêm SP" onclick="themSP()" required />
                             <input class="btn btn-cancel" id="xoasp" type="button" name="DiemGiao" disabled value="Xóa SP" onclick="xoaSP()" required />
                         </div>
                         <div style="text-align:end" class="col-lg-12">
-                            <button class="btn btn-save" style="margin-left:15px" type="submit">Thêm mới đơn hàng</button>
+                            <button class="btn btn-save" id="CapNhatDh" style="margin-left:15px" disabled type="submit">Thêm mới đơn hàng</button>
                             <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
                         </div>
                     </div>
@@ -505,54 +514,7 @@
     </div>
 </div>
 <script>
-    var i = 0;
-    function themSP() {
-        if (i >= 3) {
-            $("#themsp").attr("disabled", "disabled");
-        }
-        else {
-            i++;
-            var row = '<div class="row" id="nd' + i + '">' +
-                '<div class="form-group col-lg-9">' +
-                '<label class="control-label">Tên sản phẩm</label>' +
-                ' <select class="form-control" id="ChonSP" name="MaSP' + i +'" required>' +
-                    '<option selected disabled>----Vui lòng chọn sản phẩm----</option>' +
-                    '@{ foreach (var item01 in dssp)
-                        {<option value="@item01.MaSP">@item01.MaSP - @item01.TenSP - SL: @item01.TongTon</option> } }' +
-                '</select>' +
-                    '</div>' +
-                '<div class="form-group col-md-3">' +
-                    '<label class="control-label">Số lượng:</label>' +
-                    '<input disabled class="form-control" type="number" min=0 name="SoLuong'+i+'" value="true" id="SoLuong" required />' +
-                '</div>' +
-                '</div>';
-            $("#xoasp").prop('disabled', false);
-            document.getElementById("themdong").innerHTML += row;
 
-            console.log(i);
-            $("#btnadd").attr("action", "/KinhDoanh/ThemDH02/" + i);
-        };
-
-    }
-
-    function xoaSP() {
-
-        if (i > 0) {
-            $("#themsp").prop('disabled', false);
-            document.getElementById('nd'+i).remove();
-            i--;
-            console.log(i);
-            $("#btnadd").attr("action", "/KinhDoanh/ThemDH02/" + i);
-        } else if (i = 0) {
-            $("#xoasp").attr("disabled", "disabled");
-        };
-    }
-    function resetpage() {
-        i = 0;
-        $("#themsp").prop("disabled",false);
-        var resetp = '';
-        document.getElementById("themdong").innerHTML=resetp;
-    };
 
 </script>
 <script>
@@ -604,39 +566,256 @@
     '/<div>'; *@
 @section script{
     <script src="~/Content/js/tableToExcel.js"></script>
-    <script>
-        document.addEventListener('keydown', function (event) {
-            if (event.key === "F12") {
+    @*<script>
+            document.addEventListener('keydown', function (event) {
+                if (event.key === "F12") {
+                    event.preventDefault();
+                    location.reload();
+                }
+            });
+            document.addEventListener('contextmenu', function (event) {
                 event.preventDefault();
-                location.reload();
+            });
+            document.addEventListener('keydown', function (event) {
+                // Ngăn chặn hoạt động khi nhấn Ctrl+Shift+I hoặc F12
+                if (event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 123)) {
+                    event.preventDefault();
+                }
+            });
+            window.addEventListener('beforeunload', function (event) {
+                // Hiển thị thông báo cảnh báo nếu người dùng nhấn Ctrl+Shift+I hoặc F12
+                if (event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 123)) {
+                    event.returnValue = 'Bạn có chắc chắn muốn reload trang web này?';
+                }
+            });
+            if (window.console && window.console.firebug) {
+                alert('Vui lòng tắt Firebug trước khi tiếp tục!');
+                // hoặc bất kỳ hành động nào bạn muốn thực hiện khi phát hiện Firebug đang mở
             }
-        });
-        document.addEventListener('contextmenu', function (event) {
-            event.preventDefault();
-        });
-        document.addEventListener('keydown', function (event) {
-            // Ngăn chặn hoạt động khi nhấn Ctrl+Shift+I hoặc F12
-            if (event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 123)) {
-                event.preventDefault();
+            // Kiểm tra nếu Developer Tool được mở ra
+            if (window.console && window.console.firebug) {
+                // Nếu có, che giấu nội dung và hiển thị thông báo
+                console.clear();
+                console.log("Xảy ra lỗi không thể hiển thị nội dung!");
+                alert("Không thể hiển thị nội dung");
+                document.body.innerHTML = "";
             }
-        });
-        window.addEventListener('beforeunload', function (event) {
-            // Hiển thị thông báo cảnh báo nếu người dùng nhấn Ctrl+Shift+I hoặc F12
-            if (event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 123)) {
-                event.returnValue = 'Bạn có chắc chắn muốn reload trang web này?';
+        </script>*@
+<script>
+        //Check người dùng phải chọn mã đại lý trước khi thực hiện thêm
+        $("#MaDL").change(function () {
+            var check = $("#MaDL").val();
+            if (check != null) {
+                $("#themsp").prop("disabled", false);
             }
-        });
-        if (window.console && window.console.firebug) {
-            alert('Vui lòng tắt Firebug trước khi tiếp tục!');
-            // hoặc bất kỳ hành động nào bạn muốn thực hiện khi phát hiện Firebug đang mở
+            else {
+                $("#themsp").attr("disabled");
+            }
+        })
+        var i = 0;
+        function themSP() {
+            var check = $("#MaDL").val();
+            if (check == null) {
+                $("#error01").prop("hidden", false);
+            }
+            else {
+                $("#error01").attr("hidden","hidden");
+                if (i >= 3) {
+            $("#themsp").attr("disabled", "disabled");
         }
-        // Kiểm tra nếu Developer Tool được mở ra
-        if (window.console && window.console.firebug) {
-            // Nếu có, che giấu nội dung và hiển thị thông báo
-            console.clear();
-            console.log("Xảy ra lỗi không thể hiển thị nội dung!");
-            alert("Không thể hiển thị nội dung");
-            document.body.innerHTML = "";
+        else {
+            i++;
+            var row = '<div class="row" id="nd' + i + '">' +
+                '<div class="form-group col-lg-6">' +
+                    '<label class="control-label">Tên sản phẩm</label>' +
+                ' <select class="form-control" id="ChonSP'+i+'" name="MaSP' + i +'" required>' +
+                    '<option selected disabled>----Vui lòng chọn sản phẩm----</option>' +
+                    '@{ foreach (var item01 in dssp)
+                        {<option value="@item01.MaSP">@item01.MaSP - @item01.TenSP - SL: @item01.TongTon</option> } }' +
+                '</select>' +
+                    '</div>' +
+                '<div class="form-group col-md-3">' +
+                    '<label class="control-label">Số lượng:</label>' +
+                    '<input class="form-control" type="number" min=0 name="SoLuong' + i + '" id="SoLuong' + i +'" required />' +
+                '</div>' +
+                '<div class="form-group col-md-3">' +
+                    '<p class="control-label" style="margin-top: 16px;" id="Total'+i+'">Thành tiền: 0 VNĐ </p>' +
+                '</div>' +
+                '</div>';
+            $("#xoasp").prop('disabled', false);
+            var div = document.getElementById("themdong");
+            div.innerHTML += row;
+
+            console.log(i);
+            $("#SoLuongSP").attr("value", i);
+            //$("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
+        };
+            };
+
+
+    }
+    function xoaSP() {
+
+        if (i > 0) {
+            $("#themsp").prop('disabled', false);
+            document.getElementById('nd'+i).remove();
+            i--;
+            console.log(i);
+            $("#SoLuongSP").attr("value", i);
+            console.log("Đã xóa kiểm tra");
+            $("#CongNo").attr("hidden", true);
+            $("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
+        } else if (i = 0) {
+            $("#xoasp").attr("disabled", "disabled");
+
+        };
+        KTSoDu();
+        var TongTien=  $("#TongTien").data("value");
+        KTCongNo(TongTien);
+    }
+    function resetpage() {
+        i = 0;
+        $("#themsp").prop("disabled",false);
+        var resetp = '';
+        document.getElementById("themdong").innerHTML=resetp;
         }
-    </script>
+
+        $(document).ready(function () {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+            var divElement = $("#themdong").change(function () {
+                $("#CongNo").prop('hidden', false);
+                //var kt = divElement.on('change', 'select', function (e) {
+                //    console.log("Mã sản phẩm đã chọn "+$(e.target).val());
+                //    var value = $(e.target).val();
+                //    if (value != null) {
+                //        var kt01 = divElement.on('change', 'input', function (e1) {
+                //            console.log("Mã sản phẩm đã chọn khi có số lượng :" + value);
+                //            var soluong = $(e1.currentTarget).val();
+                //            console.log("Số lượng đã mua :"+ soluong);
+                //        });
+                //    }
+                //})
+
+                for (var item = 1; item <= i; item++) {
+                    var value = $("#ChonSP" + item).val();
+                    if (value != null) {
+                        var sL = $("#SoLuong" + item).val();
+                        if (sL >= 0) {
+                           // console.log("Bạn đã chọn sản phẩm với mã "+ value +" Với số lượng là :"+sL);
+                            var model = {
+                                MaSP: value,
+                                SoLuong: sL
+                            };
+                            // console.log("Item trước khi thêm vào tổng tiền " + item + "Với tổng tiền là : " + TinhTongTien(model));
+                            console.log(model);
+                            TinhTongTien(model, item);
+
+                        }
+
+                    }
+
+                }
+            });
+        });
+        function CheckTongTien() {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+
+            var total = 0;
+            for (var item01 = 1; item01 < 3; item01++) {
+                var check = $("#Total" + item01).data("value");
+                if (check != null) {
+                    total += check;
+                }
+
+            }
+            $("#TongTien").html('Tổng tiền: ' + VND.format(total));
+        }
+        var total1 = 0;
+        var total2 = 0;
+        var total3 = 0;
+        var TongTien = 0;
+        function TinhTongTien(model, item) {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+
+            $.ajax({
+                url: '/KinhDoanh/CheckTongTien',
+                type: 'POST',
+                dataType:"json",
+                data: model,
+                success: function (res) {
+                    console.log("Tổng tiền :" + res.data);
+                    var result = res.data;
+
+                    $("#Total" + item).html("Thành tiền " + VND.format(result));
+                    $("#Total" + item).attr('data-value', result);
+                    //CheckTongTien();
+                    if (item == 1) {
+                        total1 = res.data;
+                    }
+                    else if (item == 2) {
+                        total2 = res.data;
+                    }
+                    else if(item==3){
+                        total3 = res.data;
+                    }
+                    TongTien = total1 + total2 + total3;
+                    $("#TongTien").html('Tổng tiền: ' + VND.format(TongTien));
+                    $("#TongTien").attr('data-value', TongTien);
+                    $("#SoLuong" + item).attr('max', '' + res.tongton);
+                    KTCongNo(TongTien);
+                }
+            });
+
+        }
+        function KTSoDu() {
+            var total = 0;
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+            for (var item01 = 1; item01 <= i; item01++) {
+                var check = $("#Total" + item01).data("value");
+                if (check != null) {
+                    total += check;
+                }
+            }
+            $("#TongTien").html('Tổng tiền: ' + VND.format(total));
+            $("#TongTien").attr("data-value", total);
+        }
+        function KTCongNo(TongTien) {
+            var madl = $("#MaDL").val();
+            var thanhtien = TongTien;
+            console.log("Số tiền hiện tại :"+thanhtien);
+            var model = {
+                MaDL: madl,
+                ThanhTien: thanhtien
+            };
+            console.log("Thành tiền khi gửi kt : " + thanhtien + " , Mã đại lý: " + madl);
+            $.ajax({
+                url: '/KinhDoanh/CheckCongNoDL',
+                type: 'POST',
+                dataType: "json",
+                data: model,
+                success: function (res) {
+                    if (res.success == true) {
+                        $("#CongNo").html('Đơn hàng hợp lệ');
+                        $("#CapNhatDh").prop('disabled', false);
+                    }
+                    else if (res.success==false) {
+                        $("#CongNo").html('Đơn hàng vượt mức công nợ cho phép');
+                        $("#CapNhatDh").attr("disabled", "disabled");
+                    };
+                }
+            });
+        }
+</script>
 }
